Bug 798235: For flex items in a vertical flex container, treat enumerated values for flex-basis as "auto". r=dbaron